# CodexApp_memo_for_windows

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  pyproject.toml
.codex-handoff/: config.toml  decisions.md  next-thread.md  project.md  state.json  tasks.md
.github/workflows/: release-windows.yml
build-assets/: version_info.txt
build-assets/background-build/CodexHandoffBackground/: Analysis-00.toc  COLLECT-00.toc  CodexHandoffBackground.pkg  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-CodexHandoffBackground.txt  xref-CodexHandoffBackground.html
scripts/: build_windows_gui.ps1  generate_build_assets.py  launch_background.py  launch_cli.py  launch_gui.py  update_local_install.ps1
src/codex_handoff/: __init__.py  bootstrap.py  build_assets.py  cli.py  clock.py  codex_sessions.py  codex_state.py  config.py  daemon.py  errors.py  files.py  focus.py  gui.py  installer.py  localization.py  memory.py  models.py  paths.py  processes.py  relevance.py  renderer.py  service.py  sources.py  summaries.py  templates.py
tests/: conftest.py  test_build_assets.py  test_cli.py  test_codex_state.py  test_daemon.py  test_focus.py  test_gui.py  test_installer.py  test_localization.py  test_memory.py  test_summaries.py
tests/fixtures/: expected_next_thread_v2.md
