[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "codex-handoff"
version = "0.6.11"
description = "Local handoff generator for Codex projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Codex OSS" },
]
dependencies = [
  "typer>=0.12,<1.0",
]

[project.scripts]
codex-handoff = "codex_handoff.cli:app"
codex-handoff-ui = "codex_handoff.gui:main"

[dependency-groups]
dev = [
  "pytest>=8.3,<9.0",
]
build = [
  "pyinstaller>=6.14,<7.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_handoff"]
